remove material-ui

--- a/frontend/src/template/homeTemplate/layout/footer/styles/styles.scss
+++ b/frontend/src/template/homeTemplate/layout/footer/styles/styles.scss
@@ -1,7 +1,7 @@
 @import "assets/styles/common.scss";
 
 .wrapperFooter {
-  background: url("https://i1.wp.com/demo4.drfuri.com/razzi3/wp-content/uploads/sites/17/2021/06/bg-1.jpg?ssl=1");
+  background: url("https://wisynco.com/wp-content/uploads/2014/12/footer-background-011.jpg");
   padding-top: 70px;
 
   color: $white-0;
